--- a/tt_web_gruenuklar_layout/views/report_templates.xml
+++ b/tt_web_gruenuklar_layout/views/report_templates.xml
@@ -14,14 +14,7 @@
              Grün &amp; Klar GbR Eduard-Mörike-Str. 6 68535 Edingen-Neckarhausen
                </div>
             </div>
-        </div>
-
-        <div t-attf-class="o_company_#{company.id}_layout article o_report_layout_gruenundklar {{  'o_report_layout_background' if company.layout_background in ['Geometric', 'Custom']  else  '' }}" t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8') if company.layout_background_image and company.layout_background == 'Custom' else '/base/static/img/bg_background_template.jpg' }});" t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id" t-att-data-oe-lang="o and o.env.context.get('lang')">
-            <t t-call="tt_web_gruenuklar_layout.address_layout_gruen"/>
-            <t t-out="0"/>
-        </div>
-
-        <div t-attf-class="o_company_#{company.id}_layout footer o_background_footer row" style="font-size: 10px;border-top-style: solid;border-top-color: #000000;padding-top: 4px;padding-bottom: 5px;position: absolute;width: 100%;margin-bottom: 0px;margin-top: auto;bottom:0px;">
+            <div style="font-size: 10px;border-top-style: solid;border-top-color: #000000;padding-top: 4px;padding-bottom: 5px;position: absolute;width: 100%;margin-bottom: 0px;margin-top: auto;bottom:0px;">
             <div class="col-4">
                 <div class="text-center">
                     Grün &amp; Klar<br />
@@ -43,6 +36,14 @@
                 </div>
             </div>
         </div>
+
+        </div>
+
+        <div t-attf-class="o_company_#{company.id}_layout article o_report_layout_gruenundklar {{  'o_report_layout_background' if company.layout_background in ['Geometric', 'Custom']  else  '' }}" t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8') if company.layout_background_image and company.layout_background == 'Custom' else '/base/static/img/bg_background_template.jpg' }});" t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id" t-att-data-oe-lang="o and o.env.context.get('lang')">
+            <t t-call="tt_web_gruenuklar_layout.address_layout_gruen"/>
+            <t t-out="0"/>
+        </div>
+
     </template>
 
     <template id="address_layout_gruen">
