--- a/tt_web_gruenuklar_layout/views/report_templates.xml
+++ b/tt_web_gruenuklar_layout/views/report_templates.xml
@@ -14,7 +14,7 @@
              Grün &amp; Klar GbR Eduard-Mörike-Str. 6 68535 Edingen-Neckarhausen
                </div>
             </div>
-            <div class="row" style="font-size: 10px;border-top-style: solid;border-top-color: #000000;padding-top: 4px;padding-bottom: 5px;position: absolute;width: 100%;margin-bottom: 0px;margin-top: auto;bottom:0px;">
+            <div class="row" style="font-size: 10px;border-top-style: solid;border-top-color: #000000;">
                 <div class="col-4">
                     <div class="text-center">
                         Grün &amp; Klar<br />
