--- a/tt_web_gruenuklar_layout/views/report_templates.xml
+++ b/tt_web_gruenuklar_layout/views/report_templates.xml
@@ -7,14 +7,14 @@
                 <div class="float-end">
                     <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" class="" alt="Logo"/>
                     <div class="company_address text-center" style="margin-top: 15px;">
-                        <span><p><span t-if="o"><span t-field="o.bearbeiter" /></span><span t-else="">Roland Grabenauer</span><br />Eduard-Mörike-Str. 6<br />68535 Edingen-Neckarhausen<br /><br />Telefon: 0176 / 31572669<br />Telefax: 06203 / 957944<br /><br />E-Mail: gruenundklar@web.de<br />Internet: gruenundklar.de</p></span>
+                        <span><p><span t-if="o"><span t-if="o.bearbeiter"><span t-field="o.bearbeiter" /></span><span t-else="">Roland Grabenauer</span><span t-else="">Roland Grabenauer</span><br />Eduard-Mörike-Str. 6<br />68535 Edingen-Neckarhausen<br /><br />Telefon: 0176 / 31572669<br />Telefax: 06203 / 957944<br /><br />E-Mail: gruenundklar@web.de<br />Internet: gruenundklar.de</p></span>
                     </div>
                </div>
                 <div style="font-size: 10px;text-decoration: underline;left: 50px;position: relative;">
              Grün &amp; Klar GbR Eduard-Mörike-Str. 6 68535 Edingen-Neckarhausen
                </div>
             </div>
-            <div class="row" style="font-size: 10px;border-top-style: solid;border-top-color: #000000;position:absolute;top:860px;">
+            <div class="row" style="font-size: 10px;border-top-style: solid;border-top-color: #000000;border-top-width:2px;position:absolute;top:1000px;width:100%">
                 <div class="col-4">
                     <div class="text-center">
                         Grün &amp; Klar<br />
