--- a/tt_web_gruenuklar_layout/views/report_templates.xml
+++ b/tt_web_gruenuklar_layout/views/report_templates.xml
@@ -14,7 +14,7 @@
              Grün &amp; Klar GbR Eduard-Mörike-Str. 6 68535 Edingen-Neckarhausen
                </div>
             </div>
-            <div class="row" style="font-size: 14px;border-top-style: solid;border-top-color: #000000;border-top-width:2px;position:absolute;top:1350px;width:100%;margin-top 10px;">
+            <div class="row" style="font-size: 14px;border-top-style: solid;border-top-color: #000000;border-top-width:2px;position:absolute;top:1350px;width:100%;margin-top:10px;">
                 <div class="col-4">
                     <div class="text-center">
                         Grün &amp; Klar<br />
