Update translation plugin

--- a/tt_web_gruenuklar_layout/views/report_templates.xml
+++ b/tt_web_gruenuklar_layout/views/report_templates.xml
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-4">
                     <div class="text-center">
-                        IBAN: DE53300209005390596320<br />
+                        IBAN: DE81 3002 0900 5330 6693 13<br />
                         BIC/SWIFT: CMCIDEDDXXX<br/>
                         Bank: Targo Bank
                     </div>
