Update Project Information

--- a/tt_web_gruenuklar_layout/views/sale_order_views.xml
+++ b/tt_web_gruenuklar_layout/views/sale_order_views.xml
@@ -4,9 +4,9 @@
         <field name="name">view_order_form_sachbearbeiter</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
-        <field name="priority">2</field>
+        <field name="priority">16</field>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='recurrence_block']" position="after">
+            <xpath expr="//field[@name='date_order']" position="after">
                 <field name="bearbeiter"/>
             </xpath>
         </field>
